# luau-parser

./: .gitignore  Cargo.toml  README.md  bench-results  expanded.rs
benches/: benchmark_results.rs  big_code.lua  big_code.rs  main.rs
scripts/: test.ps1
src/: lib.rs  parser.rs  utils.rs
src/ast/: comment.rs  expression.rs  function.rs  list.rs  literals.rs  local_assignment.rs  location.rs  mod.rs  name.rs  position.rs  range.rs  reference.rs  set_expressions.rs  statement.rs  token.rs  type_definition.rs  variable_declaration.rs
src/ast/block/: do_block.rs  for_in.rs  generic_for.rs  if_statement.rs  mod.rs  numerical_for.rs  repeat_block.rs  while_loop.rs
src/ast/expression/: expression_inner.rs  handle_prefix_exp.rs  mod.rs
src/ast/type_definition/: functions.rs  helper_functions.rs  mod.rs  type_value.rs  type_value_conversion.rs
src/ast/value/: function.rs  mod.rs  simple.rs  table.rs
src/display/: comment.rs  expression.rs  function.rs  list.rs  local_assignment.rs  mod.rs  name.rs  set_expressions.rs  token.rs  type_definition.rs  variable_declaration.rs
src/display/block/: do_block.rs  generic_for.rs  if_statement.rs  mod.rs  numerical_for.rs  repeat_block.rs  while_loop.rs
src/display/expression/: else_if_expression.rs  expression_inner.rs  mod.rs
src/display/type_definition/: mod.rs  type_value.rs
src/display/value/: function.rs  mod.rs  simple.rs  table.rs
src/impl/: bracketed.rs  cst.rs  list.rs  literals.rs  local_assignment.rs  macros.rs  mod.rs  name.rs  range.rs  set_expressions.rs  statement.rs  type_definition.rs
src/impl/block/: comment.rs  do_block.rs  (+13 more)
src/macors/: pretty_print.rs  print.rs
src/macros/: call_any.rs  enum_matches.rs  generate_derives.rs  get_item_from_enum.rs  impl_print.rs  impl_print_enum.rs  impl_print_struct.rs  mod.rs  parse.rs
src/types/: bracketed.rs  comment.rs  cst.rs  expression.rs  function.rs  list.rs  literals.rs  local_assignment.rs  mod.rs  name.rs  position.rs  range.rs  reference.rs  references.rs  set_expressions.rs  statement.rs  token.rs  traits.rs  type_definition.rs
src/utils/: find_type.rs  find_variable.rs  get_trivia.rs  map_option.rs  mod.rs
test-code/: env.luau  local-assignment.luau
tests/: macros.rs  main.rs  name.rs
tests/block/: local_assignment.rs  mod.rs
tests/expression/: mod.rs
tests/local_assignments/: mod.rs  table.rs
(+51 files in other folders)
