[package]
name = "luau-parser"
version = "0.2.6"
description = "A blazingly fast Luau parser with robust error recovery."
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["luau", "parser"]

documentation = "https://docs.rs/luau-parser"
repository = "https://github.com/msix29/luau-parser"
homepage = "https://github.com/msix29/luau-parser"

[dependencies]
luau-lexer = { version = "0.2.9" }
luau-parser-derive = { version = "0.2.2" }
serde = { version = "1.0.219", features = ["derive", "rc"], optional = true }
smol_str = { version = "0.3.2" }

[features]
default = ["cache"]
cache = []
serde = ["dep:serde", "smol_str/serde", "luau-lexer/serde"]

[[bench]]
name = "main"
path = "benches/main.rs"
harness = false
