[package]
name = "luau-parser"
version = "0.2.62"
description = "A blazingly fast Luau parser with robust error recovery."
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["luau", "parser"]

documentation = "https://docs.rs/luau-parser"
repository = "https://github.com/msix29/luau-parser"
homepage = "https://github.com/msix29/luau-parser"

[dependencies]
lsp-types = "0.97.0"
luau-lexer = { version = "0.2.92" }
luau-parser-derive = { version = "0.2.22" }
serde = { version = "1.0.219", features = ["derive", "rc"], optional = true }
smol_str = { version = "0.3.2" }

[features]
default = ["cache"]
cache = []
async = []
serde = ["dep:serde", "smol_str/serde", "luau-lexer/serde"]

[[bench]]
name = "main"
path = "benches/main.rs"
harness = false
